@@ -1,3 +1,7 @@
+2013-01-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* tumblr/__init__.py: Updated for new Tumblr API.
+
 2012-12-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* plugins/shotwell.py: Added support for shotwell 0.13 data base.
